feat: add Tailwind CSS configuration and dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,10 +37,13 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "postcss": "^8.5.6",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.17",
     "zustand": "^5.0.8"
   }
 }
